feat(String): List with one element to String